# aistore

./: .gitignore  AGENTS.md  Cargo.toml  LOCK_PLAN.md  P0_PLAN.md  README.md
bench/: Cargo.toml
bench/examples/: data_consistency.rs  test_scan.rs
bench/src/: main.rs  metrics.rs
bench/src/scenarios/: mod.rs
bench/system/: sbtest1.tbl
data/system/: users.tbl
docs/plans/: 2026-02-28-storage-engine-crud-design.md
src/: lib.rs  main.rs  storage.rs  types.rs
src/buffer/: AGENTS.md  DESIGN.md  double_write.rs  flusher.rs  lru.rs  mod.rs
src/catalog/: AGENTS.md  error.rs  mod.rs  tests.rs
src/executor/: mod.rs
src/heap/: mod.rs
src/index/: DESIGN.md  btree.rs  key.rs  meta.rs  mod.rs
src/infrastructure/: AGENTS.md  mod.rs
src/infrastructure/hash/: README.md  bench.rs  mod.rs  tests.rs
src/infrastructure/hash_table/: README.md  bench.rs  mod.rs  tests.rs
src/infrastructure/lwlock/: README.md  bench.rs  mod.rs
src/lock/: deadlock.rs  mod.rs  row_lock.rs  table_lock.rs  transaction.rs
src/page/: AGENTS.md  PAGEDESIGN.md  mod.rs  page.rs  tests.rs
src/segment/: AGENTS.md  design.md  mod.rs  tests.rs
src/sql/: mod.rs
src/table/: AGENTS.md  builder.rs  column.rs  mod.rs  syscache.rs  table.rs  tests.rs
src/tablespace/: AGENTS.md  DESIGN.md  buffered.rs  mod.rs  segment.rs
src/vfs/: AGENTS.md  error.rs  interface.rs  local_fs.rs  mod.rs  tests.rs
src/wal/: DESIGN.md  checkpoint.rs  config.rs  log_buffer.rs  log_file.rs  log_record.rs  lsn.rs  mod.rs  recovery.rs
