[package]
name = "aistore"
version = "0.1.0"
edition = "2024"

[dependencies]
jemallocator = "0.5.4"
jemalloc-sys = "0.5.4"
rand = "0.8.5"
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }
simplehash = "0.1.3"
crc32fast = "1.5.0"
crc-fast = "1.10.0"
parking_lot = "0.12.3"
linked-hash-map = "0.5.6"
libc = "0.2.153"

[dev-dependencies]
criterion = "0.5.1"

# Criterion bench configuration
[[bench]]
name = "lwlock_bench"
harness = false
path = "src/infrastructure/lwlock/bench.rs"

[[bench]]
name = "hash_bench"
harness = false
path = "src/infrastructure/hash/bench.rs"

[[bench]]
name = "hash_table_bench"
harness = false
path = "src/infrastructure/hash_table/bench.rs"




